[lworld] C2 compilation fails with "no reachable node should have no use"

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/compile.cpp:3002), pid=2856411, tid=2856426
      # fatal error: no reachable node should have no use
      #
      # JRE version: Java(TM) SE Runtime Environment (22.0) (fastdebug build 22-lworld4ea-2024-02-06-1232159.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-lworld4ea-2024-02-06-1232159.tobias..., mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xa0b1ee] Compile::check_no_dead_use() const+0x4be
      #

      Current CompileTask:
      C2:20278 430 b compiler.valhalla.inlinetypes.TestNullableInlineTypes::test84 (49 bytes)

      Stack: [0x00007f16f10b2000,0x00007f16f11b3000], sp=0x00007f16f11ae340, free space=1008k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xa0b1ee] Compile::check_no_dead_use() const+0x4be (compile.cpp:3002)
      V [libjvm.so+0xa1fc06] Compile::Optimize()+0x1326 (compile.cpp:2970)
      V [libjvm.so+0xa231c4] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1c04 (compile.cpp:868)
      V [libjvm.so+0x8659e5] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1e5 (c2compiler.cpp:135)
      V [libjvm.so+0xa2ea00] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x980 (compileBroker.cpp:2305)
      V [libjvm.so+0xa2f798] CompileBroker::compiler_thread_loop()+0x508 (compileBroker.cpp:1964)
      V [libjvm.so+0xee89ec] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:721)
      V [libjvm.so+0x17dda0a] Thread::call_run()+0xba (thread.cpp:220)
      V [libjvm.so+0x14d768a] thread_native_entry(Thread*)+0x12a (os_linux.cpp:787)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: