8328699: [lworld] C2 compilation fails with "no reachable node should have no use"